<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.tagb.ui.login.LoginViewModel" />

        <variable
            name="clickHandler"
            type="android.view.View.OnClickListener" />
    </data>

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp"
            tools:context=".ui.login.MainActivity">

            <View
                android:id="@+id/view_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_185sdp"
                android:background="@drawable/white_rectangle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageRunParking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/ic_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/view_header" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_enforcement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/message_enforcement"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@id/view_header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/_15sdp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_email_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email_id"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintRight_toRightOf="@+id/guide_line_end"
                app:layout_constraintTop_toBottomOf="@id/view_header" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_email_id_login"
                style="@style/Widget.AppCompat.EditText.LoginEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintRight_toRightOf="@+id/guide_line_end"
                app:layout_constraintTop_toBottomOf="@id/text_email_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintRight_toRightOf="@+id/guide_line_end"
                app:layout_constraintTop_toBottomOf="@id/edit_email_id_login" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_password_login"
                style="@style/Widget.AppCompat.EditText.LoginEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintRight_toRightOf="@+id/guide_line_end"
                app:layout_constraintTop_toBottomOf="@id/text_password" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/transparent"
                android:onClick="@{v->clickHandler.onClick(v)}"
                android:src="@drawable/ic_icon_hide_password"
                app:layout_constraintBottom_toBottomOf="@id/edit_password_login"
                app:layout_constraintRight_toRightOf="@id/edit_password_login"
                app:layout_constraintTop_toTopOf="@id/edit_password_login" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_box_remeber_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23sdp"
                android:buttonTint="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="@string/message_remember_me"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintStart_toStartOf="@id/guide_line_begin"
                app:layout_constraintTop_toBottomOf="@id/edit_password_login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:foregroundGravity="right"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/check_box_remeber_me"
                app:layout_constraintRight_toRightOf="@id/guide_line_end"
                app:layout_constraintTop_toTopOf="@id/check_box_remeber_me" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_23sdp"
                android:background="@drawable/design_button"
                android:fontFamily="@font/poppins_semibold"
                android:onClick="@{v->clickHandler.onClick(v)}"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintRight_toRightOf="@+id/guide_line_end"
                app:layout_constraintTop_toBottomOf="@id/check_box_remeber_me" />

            <View
                android:id="@+id/view_left"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@color/divider"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/message_or"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/view_left"
                app:layout_constraintLeft_toRightOf="@id/view_left"
                app:layout_constraintRight_toLeftOf="@id/view_right"
                app:layout_constraintTop_toTopOf="@id/view_left" />

            <View
                android:id="@+id/view_right"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@color/divider"
                app:layout_constraintRight_toRightOf="@id/guide_line_end"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <View
                android:id="@+id/view_biometric"
                android:layout_width="0dp"
                android:layout_height="@dimen/_132sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_200sdp"
                android:background="@drawable/biometric_text"
                app:layout_constraintLeft_toLeftOf="@id/guide_line_begin"
                app:layout_constraintRight_toRightOf="@+id/guide_line_end"
                app:layout_constraintTop_toBottomOf="@id/text_or" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/image_btn_biometric"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/transparent"
                android:src="@drawable/ic_face_id"
                app:layout_constraintLeft_toLeftOf="@+id/view_biometric"
                app:layout_constraintRight_toRightOf="@id/view_biometric"
                app:layout_constraintTop_toTopOf="@id/view_biometric" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_login_with_face_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/message_login_with_biometric"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintLeft_toLeftOf="@+id/view_biometric"
                app:layout_constraintRight_toRightOf="@id/view_biometric"
                app:layout_constraintTop_toBottomOf="@id/image_btn_biometric" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>